--- a/.github/workflows/wasm-release.yml
+++ b/.github/workflows/wasm-release.yml
@@ -142,7 +142,7 @@ jobs:
         uses: mathieudutour/github-tag-action@v6.1
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          custom_tag: v${{ steps.set-version.outputs.version }}
+          custom_tag: ${{ steps.set-version.outputs.version }}
 
       - name: Trigger release workflow
         uses: peter-evans/repository-dispatch@v2
