refactor: clean useless junk files (#4)

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@ wasm-test/dist
 wasm-test/.rspack-cache
 # Local Netlify folder
 .netlify
+/.vscode/settings.json
+/.cursorignore
+/.cursorrules
+node_modules
