--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,7 +9,7 @@ on:
       - 'v[0-9]+.[0-9]+.[0-9]+-rc.*'
   workflow_dispatch:
   repository_dispatch:
-    types: [wasm-release-completed]
+    types: [trigger-native-release]
 
 concurrency: 
   group: ${{ github.ref }}-${{ github.workflow }}
@@ -48,7 +48,7 @@ jobs:
         VERSION=""
         if [[ "${{ github.event_name }}" == "push" && "${{ startsWith(github.ref, 'refs/tags/') }}" == "true" ]]; then
           VERSION=${GITHUB_REF#refs/tags/v}
-        elif [[ "${{ github.event_name }}" == "repository_dispatch" && "${{ github.event.action }}" == "wasm-release-completed" ]]; then
+        elif [[ "${{ github.event_name }}" == "repository_dispatch" && "${{ github.event.action }}" == "trigger-native-release" ]]; then
           VERSION=${{ github.event.client_payload.version }}
         elif [[ "${{ github.event_name }}" == "push" && "${{ !startsWith(github.ref, 'refs/tags/') }}" == "true" ]]; then
           SHA=$(git rev-parse --short HEAD)
@@ -101,13 +101,13 @@ jobs:
         path: subconverter/
         
     - name: Package Release
-      # Run for tags or wasm-release-completed event
-      if: startsWith(github.ref, 'refs/tags/') || (github.event_name == 'repository_dispatch' && github.event.action == 'wasm-release-completed')
+      # Run for tags or trigger-native-release event
+      if: startsWith(github.ref, 'refs/tags/') || (github.event_name == 'repository_dispatch' && github.event.action == 'trigger-native-release')
       run: tar czf ${{ matrix.artifact }}-${{ env.RELEASE_VERSION }}.tar.gz subconverter
       
     - name: Draft Release
-      # Run for tags or wasm-release-completed event
-      if: startsWith(github.ref, 'refs/tags/') || (github.event_name == 'repository_dispatch' && github.event.action == 'wasm-release-completed')
+      # Run for tags or trigger-native-release event
+      if: startsWith(github.ref, 'refs/tags/') || (github.event_name == 'repository_dispatch' && github.event.action == 'trigger-native-release')
       uses: softprops/action-gh-release@v2
       with:
         files: ${{ matrix.artifact }}-${{ env.RELEASE_VERSION }}.tar.gz
@@ -139,7 +139,7 @@ jobs:
         VERSION=""
         if [[ "${{ github.event_name }}" == "push" && "${{ startsWith(github.ref, 'refs/tags/') }}" == "true" ]]; then
           VERSION=${GITHUB_REF#refs/tags/v}
-        elif [[ "${{ github.event_name }}" == "repository_dispatch" && "${{ github.event.action }}" == "wasm-release-completed" ]]; then
+        elif [[ "${{ github.event_name }}" == "repository_dispatch" && "${{ github.event.action }}" == "trigger-native-release" ]]; then
           VERSION=${{ github.event.client_payload.version }}
         elif [[ "${{ github.event_name }}" == "push" && "${{ !startsWith(github.ref, 'refs/tags/') }}" == "true" ]]; then
           SHA=$(git rev-parse --short HEAD)
@@ -180,11 +180,11 @@ jobs:
         path: subconverter/
         
     - name: Package Release
-      if: startsWith(github.ref, 'refs/tags/') || (github.event_name == 'repository_dispatch' && github.event.action == 'wasm-release-completed')
+      if: startsWith(github.ref, 'refs/tags/') || (github.event_name == 'repository_dispatch' && github.event.action == 'trigger-native-release')
       run: tar czf ${{ matrix.artifact }}-${{ env.RELEASE_VERSION }}.tar.gz subconverter
       
     - name: Draft Release
-      if: startsWith(github.ref, 'refs/tags/') || (github.event_name == 'repository_dispatch' && github.event.action == 'wasm-release-completed')
+      if: startsWith(github.ref, 'refs/tags/') || (github.event_name == 'repository_dispatch' && github.event.action == 'trigger-native-release')
       uses: softprops/action-gh-release@v2
       with:
         files: ${{ matrix.artifact }}-${{ env.RELEASE_VERSION }}.tar.gz
@@ -214,7 +214,7 @@ jobs:
         VERSION=""
         if [[ "${{ github.event_name }}" == "push" && "${{ startsWith(github.ref, 'refs/tags/') }}" == "true" ]]; then
           VERSION=${GITHUB_REF#refs/tags/v}
-        elif [[ "${{ github.event_name }}" == "repository_dispatch" && "${{ github.event.action }}" == "wasm-release-completed" ]]; then
+        elif [[ "${{ github.event_name }}" == "repository_dispatch" && "${{ github.event.action }}" == "trigger-native-release" ]]; then
           VERSION=${{ github.event.client_payload.version }}
         elif [[ "${{ github.event_name }}" == "push" && "${{ !startsWith(github.ref, 'refs/tags/') }}" == "true" ]]; then
           SHA=$(git rev-parse --short HEAD)
@@ -257,11 +257,11 @@ jobs:
         path: subconverter/
         
     - name: Package Release
-      if: startsWith(github.ref, 'refs/tags/') || (github.event_name == 'repository_dispatch' && github.event.action == 'wasm-release-completed')
+      if: startsWith(github.ref, 'refs/tags/') || (github.event_name == 'repository_dispatch' && github.event.action == 'trigger-native-release')
       run: 7z a ${{ matrix.artifact }}-${{ env.RELEASE_VERSION }}.7z subconverter/
       
     - name: Draft Release
-      if: startsWith(github.ref, 'refs/tags/') || (github.event_name == 'repository_dispatch' && github.event.action == 'wasm-release-completed')
+      if: startsWith(github.ref, 'refs/tags/') || (github.event_name == 'repository_dispatch' && github.event.action == 'trigger-native-release')
       uses: softprops/action-gh-release@v2
       with:
         files: ${{ matrix.artifact }}-${{ env.RELEASE_VERSION }}.7z
