--- a/.github/workflows/wasm-release.yml
+++ b/.github/workflows/wasm-release.yml
@@ -13,6 +13,8 @@ on:
         description: 'Version to release (without v prefix)'
         required: true
         type: string
+  repository_dispatch:
+    types: [trigger-wasm-release]
 
 jobs:
   wasm_release:
@@ -39,22 +41,17 @@ jobs:
       - name: Install jq
         run: sudo apt-get update && sudo apt-get install -y jq
 
-      - name: Extract version from tag
-        if: startsWith(github.ref, 'refs/tags/')
-        id: extract-version-from-tag
-        run: |
-          TAG_NAME="${GITHUB_REF#refs/tags/}"
-          BASE_VERSION=$(echo $TAG_NAME | sed -E 's/v([0-9]+\.[0-9]+\.[0-9]+)(-[a-zA-Z0-9\.]+)?-attempt[0-9]+/\1\2/')
-          echo "version=$BASE_VERSION" >> $GITHUB_OUTPUT
-          echo "Extracted version: $BASE_VERSION from tag $TAG_NAME"
-
-      - name: Set version from input or tag
+      - name: Set version from input, tag or dispatch
         id: set-version
         run: |
           if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
             VERSION="${{ github.event.inputs.version }}"
+          elif [[ "${{ github.event_name }}" == "repository_dispatch" && "${{ github.event.action }}" == "trigger-wasm-release" ]]; then
+            VERSION="${{ github.event.client_payload.version }}"
           else
-            VERSION="${{ steps.extract-version-from-tag.outputs.version }}"
+            TAG_NAME="${GITHUB_REF#refs/tags/}"
+            BASE_VERSION=$(echo $TAG_NAME | sed -E 's/v([0-9]+\.[0-9]+\.[0-9]+)(-[a-zA-Z0-9\.]+)?-attempt[0-9]+?/\1\2/')
+            VERSION="$BASE_VERSION"
           fi
           echo "version=$VERSION" >> $GITHUB_OUTPUT
           echo "Final version for release: $VERSION"
@@ -148,5 +145,5 @@ jobs:
         uses: peter-evans/repository-dispatch@v2
         with:
           token: ${{ secrets.PAT_TOKEN }}
-          event-type: wasm-release-completed
+          event-type: trigger-native-release
           client-payload: '{"version": "${{ steps.set-version.outputs.version }}"}'
