--- a/www/package.json
+++ b/www/package.json
@@ -8,7 +8,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "deploy:netlify": "netlify deploy --build"
+    "deploy:netlify": "NETLIFY=true netlify deploy --build"
   },
   "dependencies": {
     "@monaco-editor/react": "^4.7.0",
