--- a/www/package.json
+++ b/www/package.json
@@ -1,6 +1,6 @@
 {
   "name": "subconverter-next",
-  "version": "0.1.0",
+  "version": "0.2.13-beta.dev.fc35328",
   "private": true,
   "scripts": {
     "dev": "next dev",
