Refactor VFS error handling and improve admin API functions. Added new error types, streamlined file operations, and enhanced directory metadata management. Updated logging for better traceability and removed unnecessary console logs. Adjusted GitHub loading logic for improved performance and reliability.

--- a/www/package.json
+++ b/www/package.json
@@ -8,7 +8,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "deploy:netlify": "NETLIFY=true netlify deploy --build --prod"
+    "deploy:netlify": "NETLIFY=true netlify deploy --build"
   },
   "dependencies": {
     "@monaco-editor/react": "^4.7.0",
