--- a/www/package.json
+++ b/www/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "rebuild:wasm:dev": "cd .. && ./build-wasm.sh && cd www && pnpm dev",
+    "rebuild:wasm:dev": "cd .. && ./scripts/build-wasm.sh && cd www && pnpm dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -36,11 +36,9 @@
     "@types/webpack": "^5.28.5",
     "eslint": "^9.24.0",
     "eslint-config-next": "15.3.0",
-    "next-rspack": "^15.3.0",
     "tailwindcss": "^4.1.4",
     "typescript": "^5.8.3",
-    "url": "^0.11.4",
-    "subconverter-wasm": "0.2.13-beta.dev.d9e0681"
+    "url": "^0.11.4"
   },
   "engines": {
     "node": ">=20.0.0"
