--- a/www/package.json
+++ b/www/package.json
@@ -24,7 +24,7 @@
     "postcss": "^8.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "subconverter-wasm": "0.2.13-beta.dev.d9e0681"
+    "subconverter-wasm": "0.2.13-beta.dev.94d8792"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
@@ -38,7 +38,8 @@
     "eslint-config-next": "15.3.0",
     "tailwindcss": "^4.1.4",
     "typescript": "^5.8.3",
-    "url": "^0.11.4"
+    "url": "^0.11.4",
+    "subconverter-wasm": "0.2.13-beta.dev.94d8792"
   },
   "engines": {
     "node": ">=20.0.0"
