Update build script path in auto-patch-release workflow
- Changed the path of the build script from './build-wasm.sh' to './scripts/build-wasm.sh' to reflect the new directory structure.

--- a/.github/workflows/auto-patch-release.yml
+++ b/.github/workflows/auto-patch-release.yml
@@ -36,7 +36,7 @@ jobs:
 
       - name: Run build script to bump patch and prepare release
         id: build_script
-        run: ./build-wasm.sh --bump-patch
+        run: ./scripts/build-wasm.sh --bump-patch
 
       - name: Trigger WASM Release Workflow
         uses: peter-evans/repository-dispatch@v2
