Add Node.js setup and pnpm installation to auto-patch-release workflow
- Introduced steps to set up Node.js version 20 and install pnpm globally in the auto-patch-release workflow, enhancing the build environment for future releases.

--- a/.github/workflows/auto-patch-release.yml
+++ b/.github/workflows/auto-patch-release.yml
@@ -34,6 +34,14 @@ jobs:
       - name: Install jq
         run: sudo apt-get update && sudo apt-get install -y jq
 
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20' # Or specify your desired Node.js version
+
+      - name: Install pnpm
+        run: npm install -g pnpm
+
       - name: Run build script to bump patch and prepare release
         id: build_script
         run: ./scripts/build-wasm.sh --bump-patch
