Add retry logic for pnpm installation in WASM release workflow
- Implemented a retry mechanism for the pnpm install command to handle potential failures, allowing up to 5 attempts with a delay between retries.
- Added success and failure messages to provide feedback on the installation process, improving workflow robustness.

--- a/.github/workflows/wasm-release.yml
+++ b/.github/workflows/wasm-release.yml
@@ -112,7 +112,30 @@ jobs:
             cd www
             jq ".dependencies[\"subconverter-wasm\"] = \"$VERSION\"" package.json > tmp.json && mv tmp.json package.json
             npm install -g pnpm
-            pnpm install --no-frozen-lockfile
+            # pnpm install --no-frozen-lockfile
+            # Add retry logic for pnpm install
+            MAX_RETRIES=5
+            RETRY_DELAY=5 # seconds
+            RETRY_COUNT=0
+
+            echo "Running pnpm install in www (will retry up to $MAX_RETRIES times)..."
+            until pnpm install --no-frozen-lockfile; do
+                RETRY_COUNT=$((RETRY_COUNT + 1))
+                if [ $RETRY_COUNT -ge $MAX_RETRIES ]; then
+                    echo "Error: pnpm install failed after $MAX_RETRIES attempts."
+                    # Optionally fail the workflow step:
+                    # exit 1
+                    break # Or exit 1 to fail the step
+                fi
+                echo "pnpm install failed. Retrying in $RETRY_DELAY seconds (attempt $((RETRY_COUNT + 1))/$MAX_RETRIES)..."
+                sleep $RETRY_DELAY
+            done
+            # Check if pnpm install ultimately succeeded
+            if [ $RETRY_COUNT -lt $MAX_RETRIES ]; then
+              echo "pnpm install successful."
+            else
+              echo "pnpm install failed after retries. Continuing workflow..." # Or exit 1 if failure should stop the workflow
+            fi
             cd ..
           else
             echo "www/package.json not found, skipping update"
